--- a/Pages/ToDoList/Index.cshtml
+++ b/Pages/ToDoList/Index.cshtml
@@ -1,19 +1,50 @@
 @page "/ToDoList"
 @model ToDoIndexModel
 @{
-    ViewData["Title"]="To Do List App";
+    ViewData["Title"] = "To Do List App";
 }
-<div class="text-center">
-    <h1 class="display-4">To Do List App</h1>
-    <form method="POST">
-        <input type="text" id="newtask"name="newtask" placeholder="Enter new task" required>
-        <input type="submit" value="Submit"><br>
-        @{
-            string[] ToDoList=Model.Todolist;
-            for (int i = 0; i < ToDoList.Length; i++)
-            {
-                <label>@ToDoList[i]</label> <br>
-            }
-        }
-    </form>
-</div>
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-3 bg-info"></div>
+            <div class="col-6">
+                <h1 class="text-danger text-center">To Do List App</h1>
+                <div class="form-group" bg-warning>
+                    <form method="POST">
+                        <div class="text-center">
+                            <input type="text" id="newtask" name="newtask" placeholder="Enter new task" required>
+                            <input type="submit" value="Add Task">
+                        </div>
+                        <div class="text-left p-4">
+                            @{
+                                string[] ToDoList = Model.Todolist;
+                                for (int i = 0; i < ToDoList.Length; i++)
+                                {
+                                    if (i % 2 == 0)
+                                    {
+                                        <label class="bg-primary"><input type="checkbox" value="" /> @ToDoList[i]</label>
+                                        <br>
+                                    }
+                                    else
+                                    {
+                                        <label class="bg-light"><input type="checkbox" value="" /> @ToDoList[i]</label>
+                                        <br>
+                                    }
+                                }
+                            }
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="col-3 bg-info"></div>
+        </div>
+    </div>
+</body>
