--- a/Pages/BookMyShow/AddMovies.cshtml
+++ b/Pages/BookMyShow/AddMovies.cshtml
@@ -6,39 +6,43 @@
 @{
     ViewData["Title"] = "Add Movies";
 }
+<body>
 
-<div class="text-center">
-    <h1 class="display-4">Add Movies</h1>
-    <form class="form-horizontal" method="post">
-        <div class="form-group">
-            <label for="Name" class="col-sm-2 control-label">Movie Name</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="Name">
+    <div class="text-center">
+        <h1 class="display-4">Add Movies</h1>
+        <form class="form-horizontal" method="post">
+            <div class="form-group">
+                <label for="Name" class="col-sm-2 control-label">Movie Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="Name">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="Synopsis" class="col-sm-2 control-label">Movie Description</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="Synopsis">
+            <div class="form-group">
+                <label for="Synopsis" class="col-sm-2 control-label">Movie Description</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="Synopsis">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="Year" class="col-sm-2 control-label">Release Year</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="Year">
+            <div class="form-group">
+                <label for="Year" class="col-sm-2 control-label">Release Year</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="Year">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Submit</button>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </div>
             </div>
-        </div>
-    </form>
-    
-        @for (int i = 0; i < Model.dictMovies.Count; i++)
-        {
-            string result=(Model.dictMovies[i]).ToString();
-            <label>@result</label><br>
+        </form>
+
+        @{
+            string[] myMovieList = Model.MovieList;
+
+            for (int i = 0; i < myMovieList.Length; i++)
+            {
+                <p>@myMovieList[i]</p>
+            }
         }
-    
-</div>
+    </div>
+</body>
